<resources>
    <string name="app_name">Roman Numeral Calculator</string>
    <string name="answer">Answer</string>
    <string name="convert_to_numerals_instead">Convert to Numerals instead</string>
    <string name="you_are_converting_to_numbers">You are converting to Numbers</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="d">D</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="v">V</string>
    <string name="equal">=</string>
    <string name="i">I</string>
    <string name="c">C</string>
    <string name="x">X</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="you_are_converting_to_numerals">You are converting to Numerals</string>
    <string name="convert_to_numbers_string_convert_to_numerals_instead">Convert to Numbers @string/convert_to_numerals_instead</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="convert_to_numbers_instead">Convert to Numbers instead</string>
    <string name="back2"><![CDATA[<]]></string>
    <string name="equal2">=</string>
    <string name="_0">0</string>
</resources>
