<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/infoBox"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/you_are_converting_to_numbers"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_marginEnd="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toNumerals" />

    <Button
        android:id="@+id/toNumerals"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:onClick="switchPage"
        android:text="@string/convert_to_numerals_instead"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBox" />

    <LinearLayout
        android:id="@+id/topRow"
        android:layout_width="368dp"
        android:layout_height="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/middleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer">

        <Button
            android:id="@+id/buttonD"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/d"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonM"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/m"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonBack"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/back"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/middleRow"
        android:layout_width="368dp"
        android:layout_height="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottomRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topRow">

        <Button
            android:id="@+id/buttonX"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/x"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonL"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/l"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonC"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/c"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomRow"
        android:layout_width="368dp"
        android:layout_height="112dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middleRow">

        <Button
            android:id="@+id/buttonI"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/i"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonV"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="updateInput"
            android:text="@string/v"
            android:textSize="36sp" />

        <Button
            android:id="@+id/buttonEqual"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="convert"
            android:text="@string/equal"
            android:textSize="36sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>